# doc2skill

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cargo.rs  cli.rs  count.rs  crate_target.rs  detection.rs  fetch.rs  main.rs  providers.rs  run.rs  search.rs  warn.rs  write.rs
src/core/: count.rs  mod.rs  warn.rs  write.rs
src/csharp/: fetch.rs  mod.rs  project.rs  search.rs  target.rs
src/rust/: cargo.rs  fetch.rs  mod.rs  search.rs
src/typescript/: fetch.rs  mod.rs  package.rs  search.rs  target.rs
tests/: cli.rs
tests/snapshots/: cli__skill_md_clap_snapshot.snap
