[package]
name = "doc2skill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doc2skill"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
scraper = "0.22"
htmd = "0.1"
serde_json = "1"
inquire = "0.7"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
temp-dir = "0.2"
