[package]
name = "doc2skill"
version = "0.2.0"
edition = "2024"
description = "Generate agent skills from package documentation"
repository = "https://github.com/Odonno/doc2skill"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "skills", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "doc2skill"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.5"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "json", "blocking", "query"] }
scraper = "0.27.0"
htmd = "0.5.4"
serde_json = "1"
inquire = "0.9.4"
toml = "0.9.8"
indicatif = "0.18.5"
tiktoken-rs = { version = "0.12.0", optional = true }

[dev-dependencies]
assert_cmd = "2"
insta = "1.48.0"
predicates = "3"
temp-dir = "0.2"

[features]
default = ["tokens", "rust", "csharp", "typescript"]
tokens = ["dep:tiktoken-rs"]
rust = []
csharp = []
typescript = []
